More updates for release 0.9.17, basically done.

--- a/tex/seq64_kbd_mouse.tex
+++ b/tex/seq64_kbd_mouse.tex
@@ -6,7 +6,7 @@
 % \library     Documents
 % \author      Chris Ahlstrom
 % \date        2016-04-07
-% \update      2016-05-12
+% \update      2016-09-07
 % \version     $Revision$
 % \license     $XPC_GPL_LICENSE$
 %
@@ -235,13 +235,13 @@
       \end{tabular}
    \end{table}
 
-   \begin{enumerate}
+   \begin{itemize}
       \item Once selected (and thus rendered in grey), a pattern segment
          can be moved by the mouse.  To move it using the left or right
-         arrow keys, the paint mode must be entered, but only via the "p"
-         key -- the right mouse button deselects the greyed pattern.
+         arrow keys, the paint mode must be entered, but only via the
+         \texttt{p} key -- the right mouse button deselects the greyed pattern.
          Too tricky, we might try fixing it later.
-   \end{enumerate}
+   \end{itemize}
 
    The new features of this window section for \textsl{Sequencer64},
    as noted in
@@ -249,7 +249,7 @@
 
    \begin{itemize}
       \item \textsl{p}:  Enters the paint mode, until right-click is pressed or
-         until the "x" key is pressed.
+         until the \texttt{x} key is pressed.
       \item \textsl{x}:  Exits the paint mode.  Think of the made-up term
          "x-scape".
       \item \textsl{z}:  Zooms out the performance view.  It makes the view
