--- a/tex/seq64_pattern_editor.tex
+++ b/tex/seq64_pattern_editor.tex
@@ -6,7 +6,7 @@
 % \library     Documents
 % \author      Chris Ahlstrom
 % \date        2015-08-31
-% \update      2016-09-06
+% \update      2016-09-07
 % \version     $Revision$
 % \license     $XPC_GPL_LICENSE$
 %
@@ -48,11 +48,11 @@
    changes to a pencil) and, while holding it, press the left mouse button.  Or
    click in the pattern editor, press
    \index{keys!p}
-   "p" to select the "pencil" or "paint" mode, then
+   \texttt{p} to select the "pencil" or "paint" mode, then
    \index{mouse!left-click-drag}
    left-click-drag to add notes.
    \index{keys!x}
-   Press "x" to "eXit" or "eXscape" from that mode.  Also remember
+   Press \texttt{x} to "eXit" or "eXscape" from that mode.  Also remember
    that notes are drawn only with the length selected by the "notes" button
    near the top of the pattern window.  There are some other tricks to
    modifying the new notes that are described later.
@@ -701,9 +701,9 @@
    series of events at the current note resolution.)  One can also
    left-click in that section,
    \index{keys!p}
-   then hit the "p" key to go into "paint" mode,
+   then hit the \texttt{p} key to go into "paint" mode,
    \index{keys!x}
-   and hit the "x" key to escape that mode.
+   and hit the \texttt{x} key to escape that mode.
 
    \itempar{Event Values}{piano roll!event values}
    The events values for the currently selected category of events are shown
@@ -724,8 +724,8 @@
    When we say "editing" in the context of the piano roll, in part we mean that
    we will "draw" or "paint" notes.
    Drawing, modifying, copying, and deleting
-   notes is actually very elegant in \textsl{Seqeuencer64} (and in
-   \textsl{Seq24}).
+   notes is actually very elegant in \textsl{Seqeuencer64} and in
+   \textsl{Seq24}.
 
    Note editing is a bit different with \textsl{Sequencer64}, since it
    requires two mouse buttons in many cases.  There are some new
@@ -740,8 +740,8 @@
 
    Note that, if only a middle-button is needed, ctrl-left-button will simulate
    that button.  Also note the "Mod4 mode" for the right-click action, and the
-   "p" and "x" keys for getting in and out of "paint mode", discussed
-   elsewhere.
+   \texttt{p} and \texttt{x} keys for getting in and out of "paint mode",
+   discussed elsewhere.
 
    \index{new!mod4 mode}
    \index{keys!mod4}
