--- a/tex/seq64_patterns_panel.tex
+++ b/tex/seq64_patterns_panel.tex
@@ -91,11 +91,12 @@
  
    Note that the individual pattern boxes in the main panel, for
    patterns that are not empty, have their own
-   moving progress cursor, a tall thin line in each box.
-   By default, this short progress line is black, but it can be changed to
-   red via a "user" configuration file entry in the 
+   moving progress cursor, a vertical line in each box.
+   By default, this progress line is black, but it can be changed to
+   other colors via a "user" configuration file entry in the 
    \texttt{[user-interface-settings]} section.
-   See the \texttt{progress\_bar\_colored} item to 1 to enable this item.
+   Set the \texttt{progress\_bar\_colored} item to a value ranging from 0
+   (black) to 6 (dark cyan).
    There is also a \texttt{progress\_bar\_thick} item to enable a thicker
    progress bar, for better visibility.
 
